--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.11",
     "expo": "^48.0.4",
     "expo-status-bar": "~1.4.4",
+    "native-notify": "^3.0.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
