--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "native-notify": "^3.0.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
