--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
+    "axios": "^1.3.4",
     "expo": "^48.0.4",
     "expo-status-bar": "~1.4.4",
     "native-notify": "^3.0.4",
