--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "axios": "^1.3.4",
     "expo": "^48.0.4",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.25",
     "native-notify": "^3.0.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-card-component": "^0.1.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
